--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BallGame;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=BallGame;Trusted_Connection=True;",
+    //"BallGameMVCIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BallGameMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BallGameMVCIdentityDbContextConnection": "Server=localhost;Database=BallGame;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   }
 }
